# optimization

./: LICENSE  Makefile  bash.sh  benchmark.py  build_lagrangean3.sh  main  main.cpp  test.cpp  test_lagrangean3.cpp
Scholl_CSP/Scholl_1/: N1C1W1_A.txt  N1C1W1_B.txt  N1C1W1_C.txt  N1C1W1_D.txt  N1C1W1_E.txt  N1C1W1_F.txt  N1C1W1_G.txt  N1C1W1_H.txt  N1C1W1_I.txt  N1C1W1_J.txt  N1C1W1_K.txt  N1C1W1_M.txt  N1C1W1_N.txt  N1C1W1_O.txt  N1C1W1_P.txt  N1C1W1_Q.txt  N1C1W1_R.txt  N1C1W1_S.txt  N1C1W1_T.txt  N1C1W2_A.txt  N1C1W2_B.txt  N1C1W2_C.txt  N1C1W2_D.txt  N1C1W2_E.txt  N1C1W2_F.txt  N1C1W2_G.txt  N1C1W2_H.txt  N1C1W2_I.txt  N1C1W2_J.txt  N1C1W2_K.txt  N1C1W2_L.txt  N1C1W2_M.txt  N1C1W2_N.txt  N1C1W2_O.txt  N1C1W2_P.txt  N1C1W2_Q.txt  N1C1W2_R.txt  N1C1W2_S.txt  N1C1W4_A.txt  N1C1W4_B.txt  (+678 more)
Scholl_CSP/Scholl_2/: N1W1B1R0.txt  N1W1B1R1.txt  N1W1B1R2.txt  N1W1B1R3.txt  N1W1B1R4.txt  N1W1B1R5.txt  N1W1B1R6.txt  N1W1B1R7.txt  N1W1B1R8.txt  N1W1B1R9.txt  N1W1B2R0.txt  N1W1B2R1.txt  N1W1B2R2.txt  N1W1B2R3.txt  N1W1B2R4.txt  N1W1B2R5.txt  N1W1B2R6.txt  N1W1B2R7.txt  N1W1B2R8.txt  N1W1B2R9.txt  N1W1B3R0.txt  N1W1B3R1.txt  N1W1B3R2.txt  N1W1B3R3.txt  N1W1B3R4.txt  N1W1B3R5.txt  N1W1B3R6.txt  N1W1B3R7.txt  N1W1B3R8.txt  N1W1B3R9.txt  N1W2B1R0.txt  N1W2B1R1.txt  N1W2B1R2.txt  N1W2B1R3.txt  N1W2B1R4.txt  N1W2B1R5.txt  N1W2B1R6.txt  N1W2B1R7.txt  N1W2B1R8.txt  N1W2B1R9.txt  (+440 more)
Scholl_CSP/Scholl_3/: HARD0.txt  HARD1.txt  HARD2.txt  HARD3.txt  HARD4.txt  HARD5.txt  HARD6.txt  HARD7.txt  HARD8.txt  HARD9.txt
bin_packing/2D/: calc.cpp  calc2.cpp  calc3.cpp  calc4.cpp  calc5.py  calc6.cpp  notes.txt  out  p.lp  table.csv
src/: BranchAndPrice.hpp  Makefile  Problem.hpp  RMPModel.hpp  in  main  main.cpp  main2.cpp  restricted_master_problem.cpp
src/libSiPS-1.08p4/: CMakeLists.txt  Changelog.txt  Makefile  README.txt  check.pl  mybash.sh  opt40.in  sipsexec
src/my_ssdp/: Makefile  constraint.hpp  dynasearch.hpp  fixed.hpp  heuristics.hpp  lagrange.hpp  lagrange_mod.hpp  main.cpp  models.hpp  opt150.in  opt200.in  ptable.hpp  run-test.ps1  sips.hpp  ssdp.hpp  subgradient.hpp  successive.hpp  test-win.ps1  test.sh  test2.sh
src/ssdp/: b  g  s  (+39 more)
tanaka-windows/libSiPS-108p4/libSiPS-108p4/: CMakeLists.txt  LICENSE.txt
tanaka-windows/libSiPS-108p4/libSiPS-108p4/SiPS/: CMakeLists.txt  default.h  dynasearch.c  heuristics.c  objective.c
tanaka-windows/libSiPS-108p4/libSiPS-108p4/SiPSi/: CMakeLists.txt  dynasearch.c
tanaka-windows/libSiPS-108p4/libSiPS-108p4/common/: bmemory.c  bmemory.h  constraint.c  constraint.h  dominance.c  dominance.h  dynasearch.h  heuristics.h  lag.c  lag.h  lag2.c  lag2.h  main.c  param.c  param.h  prob_common.c  prob_common.h  ptable.c  ptable.h  sips_common.h  sol.h  solve.c  ssdp.c  ssdp.h  subgradient.c  subgradient.h
tanaka-windows/libSiPS-108p4/libSiPS-108p4/docs/: manual.tex
(+117 files in other folders)
